Fixed sorted bug

--- a/templates/report.html
+++ b/templates/report.html
@@ -10,6 +10,9 @@
         th {
             text-align: left;
         }
+        td {
+            padding: 0.5em;
+        }
         tfoot {
             padding-top: 1em;
         }
